--- a/.env
+++ b/.env
@@ -10,10 +10,9 @@ PORT=8000
 CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://localhost:6379/1
 
-# 百度翻译API凭据（需自行申请）
-BAIDU_APP_ID=你的百度翻译APPID
-BAIDU_APP_KEY=你的百度翻译密钥
-
 # 文件存储路径（可根据需要调整）
 UPLOAD_DIR=static/uploads
 OUTPUT_DIR=static/outputs
+
+ZhipuAI_API_KEY=c188942babd84c5caae38dbc9331eef0.MlkpHpeFEmzMndqq
+LLM_SESSION=session
