--- a/.env
+++ b/.env
@@ -14,5 +14,5 @@ CELERY_RESULT_BACKEND=redis://localhost:6379/1
 UPLOAD_DIR=static/uploads
 OUTPUT_DIR=static/outputs
 
-ZhipuAI_API_KEY=
+ZhipuAI_API_KEY=c188942babd84c5caae38dbc9331eef0.MlkpHpeFEmzMndqq
 LLM_SESSION=session
