--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ OUTPUT_DIR=static/outputs
 
 ZhipuAI_API_KEY=c188942babd84c5caae38dbc9331eef0.MlkpHpeFEmzMndqq
 LLM_SESSION=session
+MODEL_NAME=glm-4-flash
